Change java compatability to 8